# absolute_zero-reasoner

./: .gitignore  azr.nb  azr_mind.py  readme.md  rest.c  riferbar.md
azr/: Cargo.toml
azr/src/: compiler.rs  controller.rs  db.rs  m.rs  main.rs  metadata.rs
command/: domain_specific_language.json
output/: trux.txt
server/: info.md
server/src/: main.rs
subnodes/: LLM-Reasining(Chain-of-Thought).md
x_paralell/: Cargo.toml
x_paralell/src/: main.rs
