[package]
name = "azr_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde","v4"] }
anyhow = "1"
thiserror = "1"

# Für Prozessausführung (cargo, rustc)
tokio-process = "0.2"

# Vektor-Datenbank: als Beispiel Qdrant
qdrant-client = "1.9.0"
chrono = "0.4.41"
